--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     signingConfigs {
-        notdefault {
-            keyAlias 'default'
-            keyPassword 'password'
-        }
         debug {
             keyAlias 'debug'
             keyPassword 'password'
-            storeFile file('C:/Users/imand/Desktop/CS1699/cs1699project/debug.jks')
+            storeFile file('C:/Users/Andrew/Desktop/school/CS1699/cs1699project/debug.jks')
             storePassword 'password'
         }
     }
@@ -40,6 +36,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -48,7 +45,10 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    compile 'io.nlopez.smartlocation:library:3.3.3'
 }
+
 
 
 
