--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,14 @@ android {
         }
     }
 }
+//Need for com.github.blackcat27:library:2.0.2-SNAPSHOT (Currency Input Library)
+repositories {
+    maven { url "https://jitpack.io" }
+}
 
 dependencies {
+    //Please don't use 'compile', use 'implementation' instead
+    //They do the same thing :P
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
@@ -40,13 +46,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.google.firebase:firebase-auth:11.8.0'
-    compile 'com.google.android.gms:play-services-auth:11.8.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
-    compile 'io.nlopez.smartlocation:library:3.3.3'
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.4.4'
+    implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2' //https://github.com/BlacKCaT27/CurrencyEditText
 }
 
 
