--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 //Need for com.github.blackcat27:library:2.0.2-SNAPSHOT (Currency Input Library)
 repositories {
     maven { url "https://jitpack.io" }
+    google()
 }
 
 dependencies {
@@ -56,6 +57,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:11.8.0'
     implementation 'com.google.maps.android:android-maps-utils:0.4.4'
     implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2' //https://github.com/BlacKCaT27/CurrencyEditText
+    compile 'com.github.bumptech.glide:glide:3.8.0' //https://github.com/bumptech/glide
 }
 
 
