--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         debug {
             keyAlias 'debug'
             keyPassword 'password'
-            storeFile file('C:/Users/Andrew/Desktop/school/CS1699/cs1699project/debug.jks')
+            storeFile file('C:/Users/imand/Desktop/CS1699/cs1699project/debug.jks')
             storePassword 'password'
         }
     }
@@ -56,8 +56,10 @@ dependencies {
     implementation 'io.nlopez.smartlocation:library:3.3.3'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
     implementation 'com.google.maps.android:android-maps-utils:0.4.4'
-    implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2' //https://github.com/BlacKCaT27/CurrencyEditText
-    compile 'com.github.bumptech.glide:glide:3.8.0' //https://github.com/bumptech/glide
+    implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2'
+    //https://github.com/BlacKCaT27/CurrencyEditText
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    //https://github.com/bumptech/glide
 }
 
 
