--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2'
     //https://github.com/BlacKCaT27/CurrencyEditText
     compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.google.code.gson:gson:2.8.2'
     //https://github.com/bumptech/glide
 }
 
