--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         debug {
             keyAlias 'debug'
             keyPassword 'password'
-            storeFile file('C:/Users/imand/Desktop/CS1699/cs1699project/debug.jks')
+            storeFile file('/Users/nicksmider/Desktop/cs1699project/debug.jks')
             storePassword 'password'
         }
     }
