--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,8 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.4.4'
     implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2'
     //https://github.com/BlacKCaT27/CurrencyEditText
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
     //https://github.com/bumptech/glide
 }
 
