--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         debug {
             keyAlias 'debug'
             keyPassword 'password'
-            storeFile file('C:/Users/imand/Desktop/CS1699/cs1699project/debug.jks')
+            storeFile file('/home/austin/AndroidStudioProjects/cs1699project/debug.jks')
             storePassword 'password'
         }
     }
@@ -21,6 +21,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.debug
     }
     buildTypes {
         release {
@@ -30,6 +31,8 @@ android {
         debug {
             signingConfig signingConfigs.debug
         }
+    }
+    productFlavors {
     }
 }
 
