--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.0.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     //https://github.com/bumptech/glide
+    implementation 'com.braintreepayments.api:braintree:2.+'
 }
 
 
