TODO: -Change Notification constructor call in Task.java to reflect changes      -this includes creating the creator and requester User objects before creating the     notification -Add functionality for changing notifications in both user's table when an action is taken -Add showProfile() to NotificationAdapter.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -37,19 +37,20 @@
         <activity android:name=".CreateTask" />
         <activity android:name=".Login" />
         <activity android:name=".Task" />
-        <!--
-            BraintreeDirect required activity for Express Paypal Checkout integration
-        -->
-        <activity android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
+        <!--             BraintreeDirect required activity for Express Paypal Checkout integration -->
+        <activity
+            android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="com.errand.team5.errand.braintree" />
             </intent-filter>
         </activity>
-        
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -70,9 +71,11 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.errand.team5.errand.CreateReceiver"/>
+                <action android:name="com.errand.team5.errand.CreateReceiver" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".Notifications"></activity>
     </application>
 
 </manifest>
