Lots of changes, review files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,9 @@
         <activity android:name=".CreateTask" />
         <activity android:name=".Login" />
         <activity android:name=".Task" />
-        <!-- BraintreeDirect required activity for Express Paypal Checkout integration -->
+        <activity android:name=".UpdateTask" />
+        <activity android:name=".UpdateConfirm" />
+        <!--             BraintreeDirect required activity for Express Paypal Checkout integration -->
         <activity
             android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
             android:launchMode="singleTask">
@@ -101,6 +103,15 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="com.errand.team5.errand.SearchReceiver" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".UpdateReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.errand.team5.errand.UpdateReceiver" />
             </intent-filter>
         </receiver>
 
